--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body class="text-white">
 
-     <!-- <div class="loader flex justify-center items-center h-screen w-screen z-30 fixed">
+    <!-- <div class="loader flex justify-center items-center h-screen w-screen z-30 fixed">
         <div class="spinner">
             <div class="spinner1"></div>
         </div>
@@ -41,22 +41,21 @@
                 <div class="flex flex-col gap-5 items-center justify-between"><img src="./assets/tailwind.png" class="w-20 mt-2"><span class="font-['Lato'] text-center font-semibold text-lg ">TAILWIND</span></div>
             </div>
         </section>
+
+        <section class="container mx-auto p-3 my-10">
+            <h3 data-aos="fade-right" data-aos-delay="300" data-aos-anchor-placement="top-bottom" class="text-3xl text-center font-bold font-['Roboto_Condensed'] mb-10">Contacto</h3>
+            <ul data-aos="fade-right" data-aos-delay="400" data-aos-anchor-placement="top-bottom" class="flex flex-col md:flex-row items-center justify-evenly gap-7">
+                <li><a class="flex md:flex-col items-center font-['Lato'] font-semibold text-center gap-1 text-2xl" href="#"><i class="fa-brands fa-github"></i><span class="font-['Lato']">Github</span></a></li>
+                <li><a class="flex md:flex-col items-center font-['Lato'] font-semibold text-center gap-1 text-2xl" href="#"><i class="fa-brands fa-linkedin"></i><span class="font-['Lato']">Linkedin</span></a></li>
+                <li><a class="flex md:flex-col items-center font-['Lato'] font-semibold text-center gap-1 text-2xl" href="#"><i class="fa-brands fa-tiktok"></i><span class="font-['Lato']">TikTok</span></a></li>
+            </ul>
+        </section>
     </main>
 
-    <footer class="container mx-auto p-3 my-10">
-        <h3 data-aos="fade-right" data-aos-delay="300" data-aos-anchor-placement="top-bottom" class="text-3xl	text-center font-bold font-['Roboto_Condensed'] mb-10">Contacto</h3>
-        <ul data-aos="fade-right" data-aos-delay="400" data-aos-anchor-placement="top-bottom" class="flex flex-col md:flex-row items-center justify-evenly gap-7">
-            <li><a class="flex md:flex-col items-center font-['Lato'] font-semibold text-center gap-1 text-2xl" href="#"><i class="fa-brands fa-github"></i><span class="font-['Lato']">Github</span></a></li>
-            <li><a class="flex md:flex-col items-center font-['Lato'] font-semibold text-center gap-1 text-2xl" href="#"><i class="fa-brands fa-linkedin"></i><span class="font-['Lato']">Linkedin</span></a></li>
-            <li><a class="flex md:flex-col items-center font-['Lato'] font-semibold text-center gap-1 text-2xl" href="#"><i class="fa-brands fa-tiktok"></i><span class="font-['Lato']">TikTok</span></a></li>
-        </ul>
-    </footer>
-
-
     <nav class="sticky bottom-0 flex justify-around items-stretch py-2 bg-[#1F2C3B] z-10">
-        <a class="flex flex-col justify-center items-center rounded p-2 cursor-pointer font-['Roboto_Condensed']  hover:bg-[#2d3f54] hover:shadow-lg hover:shadow-gray-800"><i class="fa-solid fa-folder"></i> <span class="text-lg">Proyectos</span></a>
-        <a class="flex flex-col justify-center items-center bg-[#2d3f54] rounded p-2 cursor-pointer font-['Roboto_Condensed'] shadow-lg shadow-gray-800"><i class="fa-solid fa-house"></i> <span class="text-lg drop-shadow	shadow-blue-500/50">Inicio</span></a>
-        <a class="flex flex-col justify-center items-center rounded p-2 cursor-pointer font-['Roboto_Condensed']  hover:bg-[#2d3f54] hover:shadow-lg hover:shadow-gray-800"><i class="fa-solid fa-list"></i> <span class="text-lg">Descripcion</span></a>
+        <a href="./proyectos.html" class="flex flex-col justify-center items-center rounded p-2 cursor-pointer font-['Roboto_Condensed']  hover:bg-[#2d3f54] hover:shadow-lg hover:shadow-gray-800 transition ease-in-out"><i class="fa-solid fa-folder"></i> <span class="text-lg">Proyectos</span></a>
+        <a href="./index.html" class="flex flex-col justify-center items-center bg-[#2d3f54] rounded p-2 cursor-pointer font-['Roboto_Condensed'] shadow-lg shadow-gray-800 transition ease-in-out"><i class="fa-solid fa-house"></i> <span class="text-lg drop-shadow	shadow-blue-500/50">Inicio</span></a>
+        <a href="./descripcion.html" class="flex flex-col justify-center items-center rounded p-2 cursor-pointer font-['Roboto_Condensed']  hover:bg-[#2d3f54] hover:shadow-lg hover:shadow-gray-800 transition ease-in-out"><i class="fa-solid fa-list"></i> <span class="text-lg">Descripcion</span></a>
     </nav>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
