--- a/index.html
+++ b/index.html
@@ -15,48 +15,91 @@
 </head>
 <body class="text-white">
 
-    <!-- <div class="loader flex justify-center items-center h-screen w-screen z-30 fixed">
-        <div class="spinner">
-            <div class="spinner1"></div>
-        </div>
-    </div>  -->
+<div class="md:flex gap-4">
 
-    <header class="container mx-auto flex flex-col justify-start items-start py-8 px-5 mb-1">
-        <h1 class="text-4xl font-bold font-['Open_Sans'] z-20">Adrián Campos</h1>
-        <h3 class="text-slate-200 font-['Open_Sans'] text-1xl z-20">Desarrollador <span class="font-semibold">Web</span></h3>
-    </header>
+    <aside class="hidden md:flex flex-col items-stretch justify-evenly sticky h-screen top-0 px-4">
+        <a href="./proyectos.html" class="flex flex-col justify-center items-center rounded p-2 cursor-pointer font-['Roboto_Condensed']  hover:bg-[#2d3f54] hover:shadow-lg hover:shadow-gray-800 transition ease-in-out">
+            <i class="fa-solid fa-folder"></i> 
+            <span class="text-lg drop-shadow shadow-blue-500/50 transition ease-in-out">Proyectos</span>
+        </a>
+        <a href="./index.html" class="flex flex-col justify-center items-center rounded p-2 cursor-pointer font-['Roboto_Condensed']  bg-[#2d3f54] hover:shadow-lg shadow-gray-800">
+            <i class="fa-solid fa-house"></i> 
+            <span class="text-lg">Inicio</span>
+        </a>
+        <a href="./descripcion.html" class="flex flex-col justify-center items-center rounded p-2 cursor-pointer font-['Roboto_Condensed']  hover:bg-[#2d3f54] hover:shadow-lg hover:shadow-gray-800 transition ease-in-out">
+            <i class="fa-solid fa-list"></i> 
+            <span class="text-lg">Descripcion</span>
+        </a>
+    </aside>
 
-    <main class="container mx-auto px-3 py-2">
-        <section class="mb-16 p-3">
-            <h2 data-aos="fade-right" data-aos-delay="300" data-aos-anchor-placement="top-bottom" class="text-3xl	 font-semibold font-['Roboto_Condensed'] mb-1">¿Quien soy?</h2>
-            <p data-aos="fade-right" data-aos-delay="300" data-aos-anchor-placement="top-bottom" class="font-['Lato'] text-base"> Como desarrollador web junior con experiencia en la creación y mantenimiento de sitios web, estoy colaborando con un equipo de desarrolladores para aprender las mejores prácticas. Además, estoy haciendo un curso completo de desarrollo web para mejorar mis habilidades.</p>
-            <img data-aos="fade-right" data-aos-delay="300" data-aos-anchor-placement="top-bottom" src="./assets/imagen-yo.jpg" class="rounded-md shadow-lg shadow-blue-500/50 mt-10">
-        </section>
+    <div class="container mx-auto">
+        <header class="container mx-auto flex flex-col justify-start items-start py-10 px-5 mb-1">
+            <h1 class="text-5xl font-bold font-['Open_Sans'] mb-2">Adrián Campos</h1>
+            <h3 class="text-slate-200 font-['Open_Sans'] text-1xl">Desarrollador <span class="font-semibold">Web</span></h3>
+        </header>
 
-        <section class=" p-3">
-            <h2 data-aos="fade-right" data-aos-delay="300" data-aos-anchor-placement="top-bottom" class="text-3xl font-semibold font-['Roboto_Condensed'] mb-10 text-center">Lenguajes conocidos</h2>
-            <div data-aos="fade-right" data-aos-delay="400" data-aos-anchor-placement="top-bottom" class="flex justify-around items-stretch">
-                <div class="flex flex-col gap-5 items-center justify-between"><img src="./assets/css.png" class="w-14"><span class="font-['Lato'] text-center font-semibold text-lg">CSS</span></div>
-                <div class="flex flex-col gap-5 items-center justify-between"><img src="./assets/html.png" class="w-16"><span class="font-['Lato'] text-center font-semibold text-lg">HTML</span></div>
-                <div class="flex flex-col gap-5 items-center justify-between"><img src="./assets/tailwind.png" class="w-20 mt-2"><span class="font-['Lato'] text-center font-semibold text-lg ">TAILWIND</span></div>
-            </div>
-        </section>
+        <main class="container mx-auto px-3 py-2">
+            <section class="mb-16 py-10 md:py-10 px-6 flex flex-col md:flex-row items-center justify-center md:justify-around bg-black rounded-xl">
+                <div class="flex-flex-col md:w-[35%]">
+                    <h2 data-aos="fade-right" data-aos-delay="300" data-aos-anchor-placement="top-bottom" class="text-3xl font-semibold font-['Roboto_Condensed'] mb-1">¿Quien soy?</h2>
+                    <p data-aos="fade-right" data-aos-delay="300" data-aos-anchor-placement="top-bottom" class="font-['Lato'] text-base ">
+                        Mi nombre es Adrian Xavier Campos Fuentes tengo 18 años de edad, soy un Desarrollador Web Junior muy creativo y con ganas de seguir mejorando sus habilidades tanto tecnicas como laborales <br> <br> Cuento con experiencia en la creación y mantenimiento de sitios web, estoy colaborando con un equipo de desarrolladores para aprender las mejores prácticas. Además, estoy haciendo un curso completo de desarrollo web para mejorar mis habilidades.
+                    </p>
+                </div>
+                <img data-aos="fade-right" data-aos-delay="300" data-aos-anchor-placement="top-bottom" src="./assets/imagen-yo.jpg" class="rounded-md shadow-lg shadow-blue-500/50 mt-10 md:w-[50%] h-full md:mt-0">
+            </section>
 
-        <section class="container mx-auto p-3 my-10">
-            <h3 data-aos="fade-right" data-aos-delay="300" data-aos-anchor-placement="top-bottom" class="text-3xl text-center font-bold font-['Roboto_Condensed'] mb-10">Contacto</h3>
-            <ul data-aos="fade-right" data-aos-delay="400" data-aos-anchor-placement="top-bottom" class="flex flex-col md:flex-row items-center justify-evenly gap-7">
-                <li><a class="flex md:flex-col items-center font-['Lato'] font-semibold text-center gap-1 text-2xl" href="#"><i class="fa-brands fa-github"></i><span class="font-['Lato']">Github</span></a></li>
-                <li><a class="flex md:flex-col items-center font-['Lato'] font-semibold text-center gap-1 text-2xl" href="#"><i class="fa-brands fa-linkedin"></i><span class="font-['Lato']">Linkedin</span></a></li>
-                <li><a class="flex md:flex-col items-center font-['Lato'] font-semibold text-center gap-1 text-2xl" href="#"><i class="fa-brands fa-tiktok"></i><span class="font-['Lato']">TikTok</span></a></li>
-            </ul>
-        </section>
-    </main>
+            <section class="p-3">
+                <h2 data-aos="fade-right" data-aos-delay="300" data-aos-anchor-placement="top-bottom" class="text-3xl font-semibold font-['Roboto_Condensed'] mb-10 text-center">Tegnologias conocidas</h2>
+                <div data-aos="fade-right" data-aos-delay="400" data-aos-anchor-placement="top-bottom" class="grid grid-cols-3 gap-4">
+                    <div class="flex flex-col gap-5 items-center justify-between">
+                        <img src="./assets/css.png" class="w-14">
+                        <span class="font-['Lato'] text-center font-semibold text-lg uppercase">CSS</span>
+                    </div>
 
-    <nav class="sticky bottom-0 flex justify-around items-stretch py-2 bg-[#1F2C3B] z-10">
+                    <div class="flex flex-col gap-5 items-center justify-between">
+                        <img src="./assets/html.png" class="w-16">
+                        <span class="font-['Lato'] text-center font-semibold text-lg uppercase">HTML</span>
+                    </div>
+
+                    <div class="flex flex-col gap-5 items-center justify-between">
+                        <img src="./assets/tailwind.png" class="w-20 mt-2">
+                        <span class="font-['Lato'] text-center font-semibold text-lg uppercase">Tailwind</span>
+                    </div>
+                </div>
+            </section>
+
+            <section class="container mx-auto p-3 my-10 bg-black rounded-xl py-10">
+                <h3 data-aos="fade-right" data-aos-delay="300" data-aos-anchor-placement="top-bottom" class="text-3xl text-center font-bold font-['Roboto_Condensed'] mb-10">Redes Sociales</h3>
+                <nav data-aos="fade-right" data-aos-delay="400" data-aos-anchor-placement="top-bottom" class="flex md:flex-row justify-around items-center text-xl">
+
+                    <a href="https://github.com/andriby" target="_blank" class="flex md:flex-col items-center font-['Lato'] font-semibold text-center gap-1 hover:bg-neutral-900 p-4 rounded">
+                        <i class="fa-brands fa-github"></i>
+                        <span class="font-['Lato']">Andriby</span>
+                    </a>
+
+                    <a href="https://www.linkedin.com/in/adrian-xavier-campos-fuentes-70bb00270/" target="_blank" class="flex md:flex-col items-center font-['Lato'] font-semibold text-center gap-1 hover:bg-neutral-900 p-4 rounded" >
+                        <i class="fa-brands fa-linkedin"></i>
+                        <span class="font-['Lato']">Adrian Campos</span>
+                    </a>
+
+                    <a href="https://www.tiktok.com/@andriby0" target="_blank" class="flex md:flex-col items-center font-['Lato'] font-semibold text-center gap-1 hover:bg-neutral-900 p-4 rounded" >
+                        <i class="fa-brands fa-tiktok"></i>
+                        <span class="font-['Lato']">@Andriby0</span>
+                    </a>
+
+                </nav>
+            </section>
+        </main>
+    </div>
+
+    <nav class="sticky bottom-0 flex justify-around items-stretch py-2 bg-[#1F2C3B] z-10 md:hidden">
         <a href="./proyectos.html" class="flex flex-col justify-center items-center rounded p-2 cursor-pointer font-['Roboto_Condensed']  hover:bg-[#2d3f54] hover:shadow-lg hover:shadow-gray-800 transition ease-in-out"><i class="fa-solid fa-folder"></i> <span class="text-lg">Proyectos</span></a>
         <a href="./index.html" class="flex flex-col justify-center items-center bg-[#2d3f54] rounded p-2 cursor-pointer font-['Roboto_Condensed'] shadow-lg shadow-gray-800 transition ease-in-out"><i class="fa-solid fa-house"></i> <span class="text-lg drop-shadow	shadow-blue-500/50">Inicio</span></a>
         <a href="./descripcion.html" class="flex flex-col justify-center items-center rounded p-2 cursor-pointer font-['Roboto_Condensed']  hover:bg-[#2d3f54] hover:shadow-lg hover:shadow-gray-800 transition ease-in-out"><i class="fa-solid fa-list"></i> <span class="text-lg">Descripcion</span></a>
     </nav>
+
+</div>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
