--- a/descripcion.html
+++ b/descripcion.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Oswald:wght@200..700&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <title>Descripcion</title>
 </head>
-<body class="text-white">
+<body class="text-white bg-[#0F172A]">
 
 <div class="md:flex gap-4">
     <aside class="hidden md:flex flex-col items-stretch justify-evenly sticky h-screen top-0 px-4">
@@ -108,7 +108,7 @@
                 <h2 data-aos="zoom-in" class="text-center font-['Roboto_Condensed'] mb-16 text-4xl">Experiencia Laboral</h2>
 
                 <div class="flex flex-col md:flex-row justify-center items-center w-[90%] mx-auto gap-5">
-                    <div data-aos="flip-down" class="w-[40%] mx-auto flex flex-col gap-3 font-semibold justify-center items-center hover:scale-105 transition ease-in-out w-[50%]">
+                    <div data-aos="flip-down" class="w-full md:w-[40%] mx-auto flex flex-col gap-3 font-semibold justify-center items-center hover:scale-105 transition ease-in-out w-[50%]">
                         <img src="./assets/ipsfa.png" class="rounded-2xl shadow-sm shadow-indigo-500/50">
                         <span class="text-center font-bold text-white font-['Lato'] text-md">
                             Instituto de Prevision Social Para las Fuerzas Armadas <br>
@@ -117,8 +117,8 @@
                         </span>
                     </div>
     
-                    <div data-aos="flip-down" class="w-[30%] mx-auto flex flex-col gap-3 font-semibold justify-center items-center hover:scale-105 transition ease-in-out">
-                        <h2 class="font-['Roboto_Condensed'] text-3xl mb-3">Funciones principales</h2>
+                    <div data-aos="flip-down" class="w-[95%] md:w-[30%] mx-auto flex flex-col gap-3 font-semibold justify-center items-center hover:scale-105 transition ease-in-out">
+                        <h2 class="font-['Roboto_Condensed'] text-3xl mt-10 md:mt-0 md:mb-3">Funciones principales</h2>
                         <span class="text-center font-bold text-white font-['Lato'] text-1xl">
                             Mantenimiento y actualización de sitios web corporativos, soporte de sistemas internos para garantizar eficiencia y disponibilidad, configuración y administración de servidores para respaldar operaciones empresariales.
                         </span>
