--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Oswald:wght@200..700&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <title>Portafolio</title>
 </head>
-<body class="text-white">
+<body class="text-white bg-[#0F172A]">
 
 <div class="md:flex gap-4">
 
@@ -43,7 +43,7 @@
                 <div class="flex-flex-col md:w-[35%]">
                     <h2 data-aos="fade-right" data-aos-delay="300" data-aos-anchor-placement="top-bottom" class="text-3xl font-semibold font-['Roboto_Condensed'] mb-1">¿Quien soy?</h2>
                     <p data-aos="fade-right" data-aos-delay="300" data-aos-anchor-placement="top-bottom" class="font-['Lato'] text-base ">
-                        Mi nombre es Adrian Xavier Campos Fuentes tengo 18 años de edad, soy un Desarrollador Web Junior muy creativo y con ganas de seguir mejorando sus habilidades tanto tecnicas como laborales <br> <br> Cuento con experiencia en la creación y mantenimiento de sitios web, estoy colaborando con un equipo de desarrolladores para aprender las mejores prácticas. Además, estoy haciendo un curso completo de desarrollo web para mejorar mis habilidades.
+                        Mi nombre es Adrian Xavier Campos Fuentes tengo 18 años de edad, soy un Desarrollador Web Junior muy creativo y con ganas de seguir obteniendo conocimientos tecnicos como laborales. <br> <br> Cuento con experiencia en la creación y mantenimiento de sitios web, estoy colaborando con un equipo de desarrolladores para aprender las mejores prácticas. Además, estoy haciendo un curso completo de desarrollo web para mejorar mis habilidades.
                     </p>
                 </div>
                 <img data-aos="fade-right" data-aos-delay="300" data-aos-anchor-placement="top-bottom" src="./assets/imagen-yo.jpg" class="rounded-md shadow-lg shadow-blue-500/50 mt-10 md:w-[50%] h-full md:mt-0">
@@ -73,18 +73,18 @@
                 <h3 data-aos="fade-right" data-aos-delay="300" data-aos-anchor-placement="top-bottom" class="text-3xl text-center font-bold font-['Roboto_Condensed'] mb-10">Redes Sociales</h3>
                 <nav data-aos="fade-right" data-aos-delay="400" data-aos-anchor-placement="top-bottom" class="flex md:flex-row justify-around items-center text-xl">
 
-                    <a href="https://github.com/andriby" target="_blank" class="flex md:flex-col items-center font-['Lato'] font-semibold text-center gap-1 hover:bg-neutral-900 p-4 rounded">
-                        <i class="fa-brands fa-github"></i>
+                    <a href="https://github.com/andriby" target="_blank" class="flex flex-col items-center font-['Lato'] font-semibold text-center gap-1 hover:bg-neutral-900 p-4 rounded">
+                        <i class="fa-brands fa-github text-3xl"></i>
                         <span class="font-['Lato']">Andriby</span>
                     </a>
 
-                    <a href="https://www.linkedin.com/in/adrian-xavier-campos-fuentes-70bb00270/" target="_blank" class="flex md:flex-col items-center font-['Lato'] font-semibold text-center gap-1 hover:bg-neutral-900 p-4 rounded" >
-                        <i class="fa-brands fa-linkedin"></i>
+                    <a href="https://www.linkedin.com/in/adrian-xavier-campos-fuentes-70bb00270/" target="_blank" class="flex flex-col items-center font-['Lato'] font-semibold text-center gap-1 hover:bg-neutral-900 p-4 rounded" >
+                        <i class="fa-brands fa-linkedin text-3xl"></i>
                         <span class="font-['Lato']">Adrian Campos</span>
                     </a>
 
-                    <a href="https://www.tiktok.com/@andriby0" target="_blank" class="flex md:flex-col items-center font-['Lato'] font-semibold text-center gap-1 hover:bg-neutral-900 p-4 rounded" >
-                        <i class="fa-brands fa-tiktok"></i>
+                    <a href="https://www.tiktok.com/@andriby0" target="_blank" class="flex flex-col items-center font-['Lato'] font-semibold text-center gap-1 hover:bg-neutral-900 p-4 rounded" >
+                        <i class="fa-brands fa-tiktok text-3xl"></i>
                         <span class="font-['Lato']">@Andriby0</span>
                     </a>
 
