--- a/proyectos.html
+++ b/proyectos.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./styles/styles.css">
     <title>Proyectos</title>
 </head>
-<body class="text-white">
+<body class="text-white bg-[#0F172A]">
 
 <div class="md:flex gap-4">
 
