--- a/descripcion.html
+++ b/descripcion.html
@@ -16,7 +16,7 @@
 <body class="text-white bg-[#0F172A]">
 
 <div class="md:flex gap-4">
-    <aside class="hidden md:flex flex-col items-stretch justify-evenly sticky h-screen top-0 px-4">
+    <aside class="hidden xl:flex flex-col items-stretch justify-evenly sticky h-screen top-0 px-4">
         <a href="./proyectos.html" class="flex flex-col justify-center items-center rounded p-2 cursor-pointer font-['Roboto_Condensed']  hover:bg-[#2d3f54] hover:shadow-lg hover:shadow-gray-800 transition ease-in-out">
             <i class="fa-solid fa-folder"></i> 
             <span class="text-lg">Proyectos</span>
