--- a/descripcion.html
+++ b/descripcion.html
@@ -130,7 +130,7 @@
     </div>
 </div>
 
-<nav class="sticky bottom-0 flex md:hidden justify-around items-stretch py-2 bg-[#1F2C3B] z-10">
+<nav class="sticky bottom-0 flex xl:hidden justify-around items-stretch py-2 bg-[#1F2C3B] z-10">
 
     <a href="./proyectos.html" class="flex flex-col justify-center items-center rounded p-2 cursor-pointer font-['Roboto_Condensed']  hover:bg-[#2d3f54] hover:shadow-lg hover:shadow-gray-800 transition ease-in-out">
         <i class="fa-solid fa-folder"></i> 
