--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </main>
     </div>
 
-    <nav class="sticky bottom-0 flex justify-around items-stretch py-2 bg-[#1F2C3B] z-10 md:hidden">
+    <nav class="sticky bottom-0 flex justify-around items-stretch py-2 bg-[#1F2C3B] z-10 xl:hidden">
         <a href="./proyectos.html" class="flex flex-col justify-center items-center rounded p-2 cursor-pointer font-['Roboto_Condensed']  hover:bg-[#2d3f54] hover:shadow-lg hover:shadow-gray-800 transition ease-in-out"><i class="fa-solid fa-folder"></i> <span class="text-lg">Proyectos</span></a>
         <a href="./index.html" class="flex flex-col justify-center items-center bg-[#2d3f54] rounded p-2 cursor-pointer font-['Roboto_Condensed'] shadow-lg shadow-gray-800 transition ease-in-out"><i class="fa-solid fa-house"></i> <span class="text-lg drop-shadow	shadow-blue-500/50">Inicio</span></a>
         <a href="./descripcion.html" class="flex flex-col justify-center items-center rounded p-2 cursor-pointer font-['Roboto_Condensed']  hover:bg-[#2d3f54] hover:shadow-lg hover:shadow-gray-800 transition ease-in-out"><i class="fa-solid fa-list"></i> <span class="text-lg">Descripcion</span></a>
