--- a/proyectos.html
+++ b/proyectos.html
@@ -126,7 +126,7 @@
     </div>
 
 
-    <nav class="sticky bottom-0 flex justify-around items-stretch py-2 bg-[#1F2C3B] z-10 md:hidden">
+    <nav class="sticky bottom-0 flex justify-around items-stretch py-2 bg-[#1F2C3B] z-10 xl:hidden">
         <a href="./proyectos.html" class="flex flex-col justify-center items-center rounded p-2 cursor-pointer font-['Roboto_Condensed']  bg-[#2d3f54] hover:shadow-lg shadow-gray-800">
             <i class="fa-solid fa-folder"></i> 
             <span class="text-lg drop-shadow shadow-blue-500/50 transition ease-in-out overflow-hidden relative">Proyectos</span>
