--- a/proyectos.html
+++ b/proyectos.html
@@ -15,7 +15,7 @@
 </head>
 <body class="text-white bg-[#0F172A]">
 
-<div class="md:flex gap-4">
+<div class="xl:flex gap-4">
 
     <aside class="hidden xl :flex flex-col items-stretch justify-evenly sticky h-screen top-0 px-4">
         <a href="./proyectos.html" class="flex flex-col justify-center items-center rounded p-2 cursor-pointer font-['Roboto_Condensed']  bg-[#2d3f54] hover:shadow-lg shadow-gray-800">
