--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
             <section class="container mx-auto p-3 my-10 bg-black rounded-xl py-10">
                 <h3 data-aos="fade-right" data-aos-delay="300" data-aos-anchor-placement="top-bottom" class="text-3xl text-center font-bold font-['Roboto_Condensed'] mb-10">Redes Sociales</h3>
-                <nav data-aos="fade-right" data-aos-delay="400" data-aos-anchor-placement="top-bottom" class="flex md:flex-row justify-around items-center text-xl">
+                <nav data-aos="fade-right" data-aos-delay="400" data-aos-anchor-placement="top-bottom" class="flex flex-col md:flex-row justify-around items-center text-xl">
 
                     <a href="https://github.com/andriby" target="_blank" class="flex flex-col items-center font-['Lato'] font-semibold text-center gap-1 hover:bg-neutral-900 p-4 rounded">
                         <i class="fa-brands fa-github text-3xl"></i>
