--- a/descripcion.html
+++ b/descripcion.html
@@ -76,7 +76,8 @@
             </section>
 
 
-            <section data-aos="zoom-in-up" class="py-10 md:px-32 px-8 bg-slate-950 rounded-xl mb-32 shadow-lg shadow-blue-500/50 md:w-[60%] mx-auto">
+            <section data-aos="zoom-in-up" class="flex flex-col gap-5 py-10 md:px-32 px-8 bg-slate-950 rounded-xl mb-32 shadow-lg shadow-blue-500/50 md:w-[60%] mx-auto">
+                <img src="./assets/imagen-yo-2.jpeg" class="rounded-xl mb-3 xl:h-96 xl:w-80 mx-auto">
                 <p class="text-center font-['Lato'] font-medium font-semibold italic">
                     "Me considero una persona extrovertida y apasionada por el aprendizaje. Disfruto de actividades como jugar, leer y sumergirme en el mundo del desarrollo. Esta pasión me impulsa a explorar constantemente nuevas áreas de conocimiento y a buscar experiencias en el ámbito del desarrollo." 
                 </p>
@@ -87,7 +88,7 @@
                 <h2 data-aos="zoom-in" class="text-center font-['Roboto_Condensed'] pb-6 text-4xl">Estudios</h2>
 
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-                    <div data-aos="flip-down" class="w-[85%] mx-auto flex flex-col gap-3 font-semibold justify-center items-center hover:scale-105 transition ease-in-out ">
+                    <div data-aos="flip-down" class="w-[85%] mx-auto flex flex-col gap-3 font-semibold  -center items-center hover:scale-105 transition ease-in-out ">
                         <img src="./assets/liceo.png" class="rounded-2xl shadow-sm shadow-indigo-500/50 shadow-sm shadow-blue-500/50 hover:shadow-blue-500/50 hover:shadow-2xl">
                         <span class="text-center font-bold text-white font-['Lato'] text-1xl">
                             Tecnico Medio en Informatica (2017-2023)
@@ -118,7 +119,7 @@
                     </div>
     
                     <div data-aos="flip-down" class="w-[95%] md:w-[30%] mx-auto flex flex-col gap-3 font-semibold justify-center items-center hover:scale-105 transition ease-in-out">
-                        <h2 class="font-['Roboto_Condensed'] text-3xl mt-10 md:mt-0 md:mb-3">Funciones principales</h2>
+                        <h2 class="font-['Roboto_Condensed'] text-3xl mt-10 md:mt-0 md:mb-3 text-center">Funciones principales</h2>
                         <span class="text-center font-bold text-white font-['Lato'] text-1xl">
                             Mantenimiento y actualización de sitios web corporativos, soporte de sistemas internos para garantizar eficiencia y disponibilidad, configuración y administración de servidores para respaldar operaciones empresariales.
                         </span>
