--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         </header>
 
         <main class="container mx-auto px-3 py-2">
-            <section class="mb-16 py-10 md:py-10 px-6 flex flex-col md:flex-row items-center justify-center md:justify-around bg-black rounded-xl">
+            <section class="mb-16 py-10 md:py-10 px-6 flex flex-col md:flex-row items-center justify-center md:justify-around bg-[#0B0B0C] rounded-xl">
                 <div class="flex-flex-col md:w-[35%]">
                     <h2 data-aos="fade-right" data-aos-delay="300" data-aos-anchor-placement="top-bottom" class="text-3xl font-semibold font-['Roboto_Condensed'] mb-1">¿Quien soy?</h2>
-                    <p data-aos="fade-right" data-aos-delay="300" data-aos-anchor-placement="top-bottom" class="font-['Lato'] text-base ">
+                    <p data-aos="fade-right" data-aos-delay="300" data-aos-anchor-placement="top-bottom" class="font-['Lato'] text-[1.025rem] xl:text-base">
                         Mi nombre es Adrian Xavier Campos Fuentes tengo 18 años de edad, soy un Desarrollador Web Junior muy creativo y con ganas de seguir obteniendo conocimientos tecnicos como laborales. <br> <br> Cuento con experiencia en la creación y mantenimiento de sitios web, estoy colaborando con un equipo de desarrolladores para aprender las mejores prácticas. Además, estoy haciendo un curso completo de desarrollo web para mejorar mis habilidades.
                     </p>
                 </div>
@@ -69,7 +69,7 @@
                 </div>
             </section>
 
-            <section class="container mx-auto p-3 my-10 bg-black rounded-xl py-10">
+            <section class="container mx-auto p-3 my-10 bg-[#0b0b0c] rounded-xl py-10">
                 <h3 data-aos="fade-right" data-aos-delay="300" data-aos-anchor-placement="top-bottom" class="text-3xl text-center font-bold font-['Roboto_Condensed'] mb-10">Redes Sociales</h3>
                 <nav data-aos="fade-right" data-aos-delay="400" data-aos-anchor-placement="top-bottom" class="flex flex-col md:flex-row justify-around items-center text-xl">
 
