--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </section>
 
             <section class="p-3">
-                <h2 data-aos="fade-right" data-aos-delay="300" data-aos-anchor-placement="top-bottom" class="text-3xl font-semibold font-['Roboto_Condensed'] mb-10 text-center">Tegnologias conocidas</h2>
+                <h2 data-aos="fade-right" data-aos-delay="300" data-aos-anchor-placement="top-bottom" class="text-3xl font-semibold font-['Roboto_Condensed'] mb-10 text-center">Tecnologias conocidas</h2>
                 <div data-aos="fade-right" data-aos-delay="400" data-aos-anchor-placement="top-bottom" class="grid grid-cols-3 gap-4">
                     <div class="flex flex-col gap-5 items-center justify-between">
                         <img src="./assets/css.png" class="w-14">
