--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
         </header>
 
         <main class="container mx-auto px-3 py-2">
-            <section class="mb-16 py-10 md:py-10 px-6 flex flex-col md:flex-row items-center justify-center md:justify-around bg-[#0B0B0C] rounded-xl">
+            <section class="mb-16 py-10 md:py-10 px-6 flex flex-col md:flex-row items-center justify-center md:justify-evenly bg-[#0B0B0C] rounded-xl md:w-[95%] mx-auto md:py-12">
                 <div class="flex-flex-col md:w-[35%]">
-                    <h2 data-aos="fade-right" data-aos-delay="300" data-aos-anchor-placement="top-bottom" class="text-3xl font-semibold font-['Roboto_Condensed'] mb-1">¿Quien soy?</h2>
-                    <p data-aos="fade-right" data-aos-delay="300" data-aos-anchor-placement="top-bottom" class="font-['Lato'] text-[1.025rem] xl:text-base">
-                        Mi nombre es Adrian Xavier Campos Fuentes tengo 18 años de edad, soy un Desarrollador Web Junior muy creativo y con ganas de seguir obteniendo conocimientos tecnicos como laborales. <br> <br> Cuento con experiencia en la creación y mantenimiento de sitios web, estoy colaborando con un equipo de desarrolladores para aprender las mejores prácticas. Además, estoy haciendo un curso completo de desarrollo web para mejorar mis habilidades.
+                    <h2 data-aos="fade-right" data-aos-delay="300" data-aos-anchor-placement="top-bottom" class="text-3xl font-semibold font-['Roboto_Condensed'] mb-3">¿Quien soy?</h2>
+                    <p data-aos="fade-right" data-aos-delay="300" data-aos-anchor-placement="top-bottom" class="font-['Lato'] text-[1.025rem] xl:text-base text-justify">
+                        Mi nombre es <strong>Adrian Campos</strong>, tengo 18 años y actualmente desempeño la labor de un <strong>Desarrollador Web</strong>, constantemente me encuentro en busqueda de <strong>nuevos desafíos</strong> que me permitan crecer, aprender y aportar <strong>valor</strong> a cada proyecto en el que participo. ¡Bienvenido a mi portafolio en línea, donde podrás conocer más sobre mí y mi trabajo!.
                     </p>
                 </div>
-                <img data-aos="fade-right" data-aos-delay="300" data-aos-anchor-placement="top-bottom" src="./assets/imagen-yo.jpg" class="rounded-md shadow-lg shadow-blue-500/50 mt-10 md:w-[50%] h-full md:mt-0">
+                <img data-aos="fade-right" data-aos-delay="300" data-aos-anchor-placement="top-bottom" src="./assets/imagen-yo.jpg" class="rounded-md shadow-lg shadow-blue-500/50 mt-10 md:w-[35%] h-full md:mt-0">
             </section>
 
             <section class="p-3">
@@ -73,17 +73,17 @@
                 <h3 data-aos="fade-right" data-aos-delay="300" data-aos-anchor-placement="top-bottom" class="text-3xl text-center font-bold font-['Roboto_Condensed'] mb-10">Redes Sociales</h3>
                 <nav data-aos="fade-right" data-aos-delay="400" data-aos-anchor-placement="top-bottom" class="flex flex-col md:flex-row justify-around items-center text-xl">
 
-                    <a href="https://github.com/andriby" target="_blank" class="flex flex-col items-center font-['Lato'] font-semibold text-center gap-1 hover:bg-neutral-900 p-4 rounded">
+                    <a href="https://github.com/andriby" target="_blank" class="flex flex-col items-center font-['Lato'] font-semibold text-center gap-1 hover:bg-neutral-900 p-4 rounded transition ease-in-out">
                         <i class="fa-brands fa-github text-3xl"></i>
                         <span class="font-['Lato']">Andriby</span>
                     </a>
 
-                    <a href="https://www.linkedin.com/in/adrian-xavier-campos-fuentes-70bb00270/" target="_blank" class="flex flex-col items-center font-['Lato'] font-semibold text-center gap-1 hover:bg-neutral-900 p-4 rounded" >
+                    <a href="https://www.linkedin.com/in/adrian-xavier-campos-fuentes-70bb00270/" target="_blank" class="flex flex-col items-center font-['Lato'] font-semibold text-center gap-1 hover:bg-neutral-900 p-4 rounded transition ease-in-out">
                         <i class="fa-brands fa-linkedin text-3xl"></i>
                         <span class="font-['Lato']">Adrian Campos</span>
                     </a>
 
-                    <a href="https://www.tiktok.com/@andriby0" target="_blank" class="flex flex-col items-center font-['Lato'] font-semibold text-center gap-1 hover:bg-neutral-900 p-4 rounded" >
+                    <a href="https://www.tiktok.com/@andriby0" target="_blank" class="flex flex-col items-center font-['Lato'] font-semibold text-center gap-1 hover:bg-neutral-900 p-4 rounded transition ease-in-out" >
                         <i class="fa-brands fa-tiktok text-3xl"></i>
                         <span class="font-['Lato']">@Andriby0</span>
                     </a>
