--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="flex-flex-col md:w-[35%]">
                     <h2 data-aos="fade-right" data-aos-delay="300" data-aos-anchor-placement="top-bottom" class="text-3xl font-semibold font-['Roboto_Condensed'] mb-3">¿Quien soy?</h2>
                     <p data-aos="fade-right" data-aos-delay="300" data-aos-anchor-placement="top-bottom" class="font-['Lato'] text-[1.025rem] xl:text-base text-justify">
-                        Mi nombre es <strong>Adrian Campos</strong>, tengo 18 años y actualmente desempeño la labor de un <strong>Desarrollador Web</strong>, constantemente me encuentro en busqueda de <strong>nuevos desafíos</strong> que me permitan crecer, aprender y aportar <strong>valor</strong> a cada proyecto en el que participo. ¡Bienvenido a mi portafolio en línea, donde podrás conocer más sobre mí y mi trabajo!.
+                        Tengo 18 años, actualmente desempeño la labor de un <strong>Desarrollador Web</strong>, constantemente me encuentro en busqueda de <strong>nuevos desafíos</strong> que me permitan crecer, aprender y aportar <strong>valor</strong> a cada proyecto en el que participo. ¡Bienvenido a mi portafolio en línea, donde podrás conocer más sobre mí y mi trabajo!.
                     </p>
                 </div>
                 <img data-aos="fade-right" data-aos-delay="300" data-aos-anchor-placement="top-bottom" src="./assets/imagen-yo.jpg" class="rounded-md shadow-lg shadow-blue-500/50 mt-10 md:w-[35%] h-full md:mt-0">
