cambios en los enlaces

--- a/proyectos.html
+++ b/proyectos.html
@@ -48,11 +48,11 @@
                 <div data-aos="flip-right" class="w-[85%] mx-auto flex flex-col gap-3 font-semibold justify-center items-center hover:scale-105 transition ease-in-out overflow-hidden relative hover:grayscale proyecto">
                     <img src="./assets/portafolio.png" alt="" class="rounded-2xl shadow-md shadow-violet-700/50 ">
                     <div class="absolute font-bold flex justify-around contenido-proyecto text-white w-full font-['Lato']">
-                        <a href="https://github.com/andriby/portafolio" target="_blank" class="flex flex-col items-center justify-center gap-1">
+                        <a href="https://github.com/andriby/proyectos/tree/main/portafolio" target="_blank" class="flex flex-col items-center justify-center gap-1">
                             <i class="fa-solid fa-code text-xl"></i>
                             <span>Ver Codigo</span>
                         </a>
-                        <a href="https://andriby.github.io/portafolio/" target="_blank" class="flex flex-col items-center justify-center gap-1">
+                        <a href="https://andriby.github.io/proyectos/portafolio/" target="_blank" class="flex flex-col items-center justify-center gap-1">
                             <i class="fa-solid fa-globe text-xl"></i>
                             <span>Ver Pagina Web</span>
                         </a>
@@ -63,11 +63,11 @@
                 <div data-aos="flip-right" class="w-[85%] mx-auto flex flex-col gap-3 font-semibold justify-center items-center hover:scale-105 transition ease-in-out overflow-hidden relative hover:grayscale proyecto">
                     <img src="./assets/movistar.png" alt="" class="rounded-2xl shadow-md shadow-violet-700/50">
                     <div class="absolute font-bold flex justify-around contenido-proyecto text-black w-full">
-                        <a href="https://github.com/andriby/movistar" target="_blank" class="flex flex-col items-center justify-center gap-1">
+                        <a href=https://github.com/andriby/proyectos/tree/main/movistar" target="_blank" class="flex flex-col items-center justify-center gap-1">
                             <i class="fa-solid fa-code text-xl"></i>
                             <span>Ver Codigo</span>
                         </a>
-                        <a href="https://andriby.github.io/movistar/" target="_blank" class="flex flex-col items-center justify-center gap-1">
+                        <a href="https://andriby.github.io/proyectos/movistar/" target="_blank" class="flex flex-col items-center justify-center gap-1">
                             <i class="fa-solid fa-globe text-xl"></i>
                             <span>Ver Pagina web</span>
                         </a>
@@ -78,11 +78,11 @@
                 <div data-aos="flip-right" class="w-[85%] mx-auto flex flex-col gap-3 font-semibold justify-center items-center hover:scale-105 transition ease-in-out overflow-hidden relative hover:grayscale proyecto">
                     <img src="./assets/clon-de-instagram.png" alt="" class="rounded-2xl shadow-md shadow-violet-700/50">
                     <div class="absolute font-bold flex justify-around contenido-proyecto text-white w-full font-['Lato']">
-                        <a href="https://github.com/andriby/clon-de-instagram" target="_blank" class="flex flex-col items-center justify-center gap-1">
+                        <a href="https://github.com/andriby/proyectos/tree/main/clon-de-instagram" target="_blank" class="flex flex-col items-center justify-center gap-1">
                             <i class="fa-solid fa-code text-xl"></i>
                             <span>Ver Codigo</span>
                         </a>
-                        <a href="https://andriby.github.io/clon-de-instagram/" target="_blank" class="flex flex-col items-center justify-center gap-1">
+                        <a href="https://andriby.github.io/proyectos/clon-de-instagram/" target="_blank" class="flex flex-col items-center justify-center gap-1">
                             <i class="fa-solid fa-globe text-xl"></i>
                             <span>Ver Pagina web</span>
                         </a>
@@ -93,11 +93,11 @@
                 <div data-aos="flip-right" class="w-[85%] mx-auto flex flex-col gap-3 font-semibold justify-center items-center hover:scale-105 transition ease-in-out overflow-hidden relative hover:grayscale proyecto">
                     <img src="./assets/clon-de-youtube.png" alt="" class="rounded-2xl shadow-md shadow-violet-700/50">
                     <div class="absolute font-bold flex justify-around contenido-proyecto text-white w-full font-['Lato']">
-                        <a href="https://github.com/andriby/clon-de-youtube" target="_blank" class="flex flex-col items-center justify-center gap-1">
+                        <a href="https://github.com/andriby/proyectos/tree/main/clon-de-youtube" target="_blank" class="flex flex-col items-center justify-center gap-1">
                             <i class="fa-solid fa-code text-xl"></i>
                             <span>Ver Codigo</span>
                         </a>
-                        <a href="https://andriby.github.io/clon-de-youtube/" target="_blank" class="flex flex-col items-center justify-center gap-1">
+                        <a href="https://andriby.github.io/proyectos/lon-de-youtube/" target="_blank" class="flex flex-col items-center justify-center gap-1">
                             <i class="fa-solid fa-globe text-xl"></i>
                             <span>Ver Pagina web</span>
                         </a>
@@ -108,11 +108,11 @@
                 <div data-aos="flip-right" class="w-[85%] mx-auto flex flex-col gap-3 font-semibold justify-center items-center hover:scale-105 transition ease-in-out overflow-hidden relative hover:grayscale proyecto">
                     <img src="./assets/blog-de-salud.png" alt="" class="rounded-2xl shadow-md shadow-violet-700/50">
                     <div class="absolute font-bold flex justify-around contenido-proyecto text-black w-full">
-                        <a href="https://github.com/andriby/blog-de-salud" target="_blank" class="flex flex-col items-center justify-center gap-1">
+                        <a href="https://github.com/andriby/proyectos/tree/main/blog-de-salud" target="_blank" class="flex flex-col items-center justify-center gap-1">
                             <i class="fa-solid fa-code text-xl"></i>
                             <span>Ver Codigo</span>
                         </a>
-                        <a href="https://andriby.github.io/blog-de-salud/" target="_blank" class="flex flex-col items-center justify-center gap-1">
+                        <a href="https://andriby.github.io/proyectos/blog-de-salud/" target="_blank" class="flex flex-col items-center justify-center gap-1">
                             <i class="fa-solid fa-globe text-xl"></i>
                             <span>Ver Pagina web</span>
                         </a>
